--- a/music_site.html
+++ b/music_site.html
@@ -62,14 +62,14 @@
     <div id="audioPlayer">
         <div id="NowMusicName">ツイッターランド/STEAKA-初音ミク</div>
         <div id="controls">
-            <button id="prevBtn" class="controlBtn"><img src="button_prev.png" alt="Previous"></button>
-            <button id="playPauseBtn" class="controlBtn"><img id="playPauseImg" src="button_play.png" alt="Play"></button>
-            <button id="nextBtn" class="controlBtn"><img src="button_next.png" alt="Next"></button>
-            <button id="muteBtn" class="controlBtn"><img id="muteImg" src="button_unmute.png" alt="Mute"></button>
+            <button id="prevBtn" class="controlBtn"><img src="assets/button_prev.png" alt="Previous"></button>
+            <button id="playPauseBtn" class="controlBtn"><img id="playPauseImg" src="assets/button_play.png" alt="Play"></button>
+            <button id="nextBtn" class="controlBtn"><img src="assets/button_next.png" alt="Next"></button>
+            <button id="muteBtn" class="controlBtn"><img id="muteImg" src="assets/button_unmute.png" alt="Mute"></button>
         </div>
         <div id="progressContainer"><div id="progressBar"></div></div>
     </div>
-    <audio id="audio" src="music1.mp3"></audio>
+    <audio id="audio" src="musics/music1.mp3"></audio>
     <script>
         const audio = document.getElementById('audio');
         const playPauseBtn = document.getElementById('playPauseBtn');
@@ -80,12 +80,12 @@
         const prevBtn = document.getElementById('prevBtn');
         const nextBtn = document.getElementById('nextBtn');
         const playlist = [
-            'music1.mp3',
-            'music2.mp3',
-            'music3.mp3',
-            'music4.mp3',
-            'music5.mp3',
-            'music6.mp3',
+            'musics/music1.mp3',
+            'musics/music2.mp3',
+            'musics/music3.mp3',
+            'musics/music4.mp3',
+            'musics/music5.mp3',
+            'musics/music6.mp3',
         ];
         let nowaudio = 'music1.mp3';
         let currentTrackIndex = 0;
@@ -93,11 +93,11 @@
         playPauseBtn.addEventListener('click', () => {
             if (audio.paused) {
                 audio.play();
-                playPauseImg.src = 'button_stop.png'; // 一時停止画像に変更
+                playPauseImg.src = 'assets/button_stop.png'; // 一時停止画像に変更
                 playPauseImg.alt = 'Pause';
             } else {
                 audio.pause();
-                playPauseImg.src = 'button_play.png'; // 再生画像に変更
+                playPauseImg.src = 'assets/button_play.png'; // 再生画像に変更
                 playPauseImg.alt = 'Play';
             }
         });
@@ -105,10 +105,10 @@
         muteBtn.addEventListener('click', () => {
             audio.muted = !audio.muted;
             if (audio.muted) {
-                muteImg.src = 'button_mute.png'; // ミュート画像に変更
+                muteImg.src = 'assets/button_mute.png'; // ミュート画像に変更
                 muteImg.alt = 'Unmute';
             } else {
-                muteImg.src = 'button_unmute.png'; // ミュート解除画像に変更
+                muteImg.src = 'assets/button_unmute.png'; // ミュート解除画像に変更
                 muteImg.alt = 'Mute';
             }
         });
@@ -127,25 +127,25 @@
             }, 50);
             nowaudio = playlist[currentTrackIndex];
             audio.play();
-            playPauseImg.src = 'button_stop.png'; // 一時停止画像に変更
+            playPauseImg.src = 'assets/button_stop.png'; // 一時停止画像に変更
             playPauseImg.alt = 'Pause';
             switch(nowaudio){
-                case 'music1.mp3':
+                case 'musics/music1.mp3':
                     nowmusicname = 'ツイッターランド/STEAKA-初音ミク';
                     break;
-                case 'music2.mp3':
+                case 'musics/music2.mp3':
                     nowmusicname = 'サンタムエルテ/wotaku-羽累';
                     break;
-                case 'music3.mp3':
+                case 'musics/music3.mp3':
                     nowmusicname = '合法覚醒剤/STEAKA-初音ミク';
                     break;
-                case 'music4.mp3':
+                case 'musics/music4.mp3':
                     nowmusicname = 'ド屑/なきそ-歌愛ユキ';
                     break;
-                case 'music5.mp3':
+                case 'musics/music5.mp3':
                     nowmusicname = 'ぷらいまり/いよわ-可不';
                     break;
-                case 'music6.mp3':
+                case 'musics/music6.mp3':
                     nowmusicname = 'つづみぐさ/いよわ-初音ミク';
                     break;
                 default:
@@ -161,7 +161,7 @@
             }
             audio.src = playlist[currentTrackIndex];
             audio.play();
-            playPauseImg.src = 'button_stop.png'; // 一時停止画像に変更
+            playPauseImg.src = 'assets/button_stop.png'; // 一時停止画像に変更
             playPauseImg.alt = 'Pause';
         });
         // 再生位置バーの更新
